# crawl-data-diadiem247

./: .gitignore  README.md  pyproject.toml
diadiem247/: scrapy.cfg  search-ggm.py
diadiem247/diadiem247/: items.py  middlewares.py  pipelines.py  settings.py
diadiem247/diadiem247/spiders/: locations.py  search_locations.py
spider/spider/: pipelines.py  settings.py
spider/spider/spiders/: audible.py  transcripts.py  worldometers.py
